<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="494dp"
        android:layout_height="197dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_marginEnd="120dp"
        android:text="@string/home2"
        android:textColor="@color/home1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Home"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:text="@string/room"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="21dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/icon_location"
        android:contentDescription="@string/logo" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="334dp"
        android:layout_height="420dp"
        android:layout_marginEnd="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        app:srcCompat="@drawable/room12"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="339dp"
        android:layout_height="529dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/room13" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="332dp"
        android:layout_height="432dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="132dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/room_14" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="152dp"
        android:layout_height="7dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_11"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button4"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:onClick="knopka4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="411dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/status_home"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:onClick="knopka6"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>